# mtldiffrast

./: README.md  pyproject.toml  setup.py
mtldiffrast/: __init__.py
mtldiffrast/torch/: __init__.py  ops.py
src/: ext.mm  metal_antialias.h  metal_antialias.mm  metal_interpolate.h  metal_interpolate.mm  metal_rasterize.h  metal_rasterize.mm  metal_texture.h  metal_texture.mm  metal_utils.h
src/metal/: antialias.metal  interpolate.metal  rasterize.metal  texture.metal
tests/: test_backward_parity.py  test_chunked_rast.py  test_comprehensive.py  test_metal_vs_cpu.py  test_parity.py  test_rast_uvspace.py  test_render_pipeline.py
