[build-system]
requires = [
  "setuptools>=64",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "mtldiffrast"
version = "0.1.0"
description = "Metal differentiable rasterization for Apple Silicon"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["torch>=2.0"]

[tool.setuptools]
# Package discovery handled by setup.py
